--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -64,7 +64,7 @@ post_class: post-template
             <!-- If we want to display author's name and bio -->
             {% if site.author %}
                 <figure class="author-image">
-                    <a class="img" href="{{ site.baseurl }}" style="background-image: url(/assets/images/profile.png)">
+                    <a class="img" href="{{ site.baseurl }}" style="background-image: url(/assets/images/profile.jpg)">
                     <span class="hidden">{{site.author}}'s Picture</span></a>
                 </figure>
                 <section class="author">
@@ -72,7 +72,7 @@ post_class: post-template
                     <h4> {{ site.author }} </h4>
                     <!-- Author Bio -->
                     <p>
-                        Here goes the author description. You might want to place some links too in here
+                        I'm a co-founder and the CTO of [Lending Loop](https://www.lendingloop.ca), Canada's largest Peer-to-Peer lending platform. In my spare time I read, scuba dive, cycle, golf and work on products for the web.
                     </p>
                 </section>
             {% endif %}
