--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -72,7 +72,7 @@ post_class: post-template
                     <h4> {{ site.author }} </h4>
                     <!-- Author Bio -->
                     <p>
-                        I'm a co-founder and the CTO of [Lending Loop](https://www.lendingloop.ca), Canada's largest Peer-to-Peer lending platform. In my spare time I read, scuba dive, cycle, golf and work on products for the web.
+                        I'm a co-founder and the CTO of <a href="https://www.lendingloop.ca">Lending Loop</a>, Canada's largest Peer-to-Peer lending platform. In my spare time I read, scuba dive, cycle, golf and work on products for the web.
                     </p>
                 </section>
             {% endif %}
